[package]
name = "bytebox"
version = "0.1.1"
edition = "2021"
description = "Easy and performant data storage inspired by Flutter's shared_preferences."
keywords = ["storage", "msgpack", "serde"]
categories = ["config", "encoding"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/drafteddev/bytebox"
homepage = "https://github.com/drafteddev/bytebox"
documentation = "https://docs.rs/bytebox"

[dependencies]
dirs = { version = "5.0.1", optional = true }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1.2"
bevy = { version = "0.12.1", optional = true, default-features = false }

[dev-dependencies]
bevy = { version = "0.12.1", default-features = false }

[features]
default = ["path"]
# Contains common functionality for building app data paths.
path = ["dep:dirs"]
bevy = ["dep:bevy"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
required-features = ["path"]
