[package]
name = "bytebox"
version = "0.2.0"
edition = "2021"
description = "High performance and secure data storage solution."
keywords = ["storage", "config", "serde"]
categories = ["config", "encoding"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/drafteddev/bytebox"
homepage = "https://github.com/drafteddev/bytebox"
documentation = "https://docs.rs/bytebox"

[dependencies]
bitcode = { version = "0.6.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chacha20poly1305 = "0.10.1"
async-trait = "0.1.89"
async-fs = { version = "2.2.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[features]
default = ["async-fs"]
async-fs = ["dep:async-fs"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
