[package]
name = "bytebox"
version = "0.2.1"
edition = "2021"
description = "High performance and secure data storage solution."
keywords = ["storage", "config", "serde"]
categories = ["config", "encoding"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/drafteddev/bytebox"
homepage = "https://github.com/drafteddev/bytebox"
documentation = "https://docs.rs/bytebox"

[dependencies]
bitcode = { version = "0.6.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chacha20poly1305 = "0.10.1"
async-trait = { version = "0.1.89", optional = true }
async-fs = { version = "2.2.0", optional = true }
tokio = { version = "1.51.1", features = ["fs"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[build-dependencies]
cfg_aliases = "0.2.1"

[features]
default = []
async-fs = ["async-trait", "dep:async-fs"]
tokio = ["async-trait", "dep:tokio"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
